2009-10-25 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Updated.

	* po/POTFILES.in: Update list of translatable files.

	* src/runtime/na-iabout.c (na_iabout_display):
	Do not mark authors names and emails for translating (#599520).

	* src/nact/nact-preferences-editor.c
	(on_base_runtime_init_dialog, save_preferences):
	Let the user edit its preferred export format.

	* src/nact/nautilus-actions-config-tool.ui:
	Add Export tab to Preferences dialog.

2009-10-23 Pierre Wieser <pwieser@trychlos.org>

	Populates Nautilus background menus and Nautilus toolbar.
	Defines required new properties:
	- target_selection: whether the action is candidate to selection menus
	- target_background: whether the action is candidate to background menus
	- target_toolbar: whether the action is candidate to toolbar display
	- short_label: the toolbar label
	- use_same_label: whether the toolbar label is the same that those of the
	action.

	* data/nautilus-actions.schemas.in:
	* src/common/na-xml-names.h:
	Define the new keys.
	Make sure key descriptions are equal to those in nact-xml-names.h.

	* src/common/na-xml-writer.c
	(create_xml_schema, create_xml_dump): Export the new keys.
	(create_gconf_schema): Export the new schemas.

	* src/nact/nact-ibackground-tab.c:
	* src/nact/nact-ibackground-tab.h:
	* src/nact/nact-main-tab.c: New files

	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/nact-assistant-export.c
	(assistant_apply): Exported action is actually the original one,
	not those displayed in assistant because it has no profiles.

	* src/nact/nact-iaction-tab.c:
	Define three new toggle buttons for the three target properties.

	* src/nact/nact-iadvanced-tab.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-iconditions-tab.c:
	Set sensitivity depending on current selection.

	* src/nact/nact-main-window.c:
	Define new "enable-tab" signal.
	Implements new NactIBackgroundTab interface.

	* src/nact/nact-xml-reader.c
	(apply_values): Import the new keys.